--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ nav {
     height: 100px;
     padding: 10px;
     display: flex;
-    align-content: center;
+    justify-content: space-between;
+    align-items: center;
     gap: var(--gap);
 
 
