--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
 
 nav {
     height: 100px;
-    padding: 10px;
+    padding: 0.8rem 1.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
