--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,10 @@ footer a {
 
 @media (max-width: 600px) {
 
+    :root {
+        --big-font-size: 1.5rem;
+    }
+
     .container {
         display: grid;
         grid-template-columns: 1fr;
