--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: o;
 
-    --font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     --background-color: #f5f5f5;
     --secondary-background-color: green;
     --primary-color: #000000;
@@ -22,6 +22,7 @@ body {
     background-color: var(--background-color);
     color: var(--primary-color);
     box-sizing: border-box;
+    font-family: var(--font-family);
 }
 
 h1, h2, h3, h4 {
@@ -34,6 +35,7 @@ p {
 }
 
 .container {
+    width: 100vw;
     display: grid;
     /* gap: 1.5rem; */
     grid-template-columns: repeat(7, 1fr);
@@ -50,7 +52,7 @@ header {
 }
 
 nav {
-    height: 100px;
+    height: 70px;
     padding: 0.8rem 1.5rem;
     display: flex;
     justify-content: space-between;
@@ -154,7 +156,7 @@ ul {
 .card, .more-info {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     gap: var(--gap);
     padding: var(--small-padding);
     flex-wrap: wrap;
@@ -166,8 +168,8 @@ ul {
     display: flex;
     justify-content: center;
     align-items: end;
-    width: 300px;
-    height: 250px;
+    width: 250px;
+    height: 200px;
     background: lightskyblue;
     border-radius: var(--border-radius);
     padding: var(--small-padding);
@@ -231,7 +233,7 @@ footer {
 
 .footer-heading {
     text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     text-align: center;
 }
 
