--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     text-transform: capitalize;
-    padding: 1rem 2rem;
+    padding: 1rem;
     position: fixed;
     width: 100vw;
     background-color: var(--school-color);
