change nav hamburger in 1000px and less to align self from flex end to  center

--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ footer a {
         border: none;
         background: transparent;
         font-size: 30px;
-        align-self: flex-end;
+        align-self: center;
    }
 
 }
