change width size for google map and google form for mobile view from width to max width for it to be responsive

--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,7 @@ footer {
     color: var(--secondary-color);
     min-height: 70vh;
     text-transform: capitalize;
+    width: 100vw;
 }
 
 .footer-info {
@@ -469,6 +470,10 @@ footer a {
 
     .info {
         width: 100vw;
+    }
+
+    .google-map, .google-form {
+        max-width: 360px;
     }
 
 
