--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,6 @@ ul {
     align-items: flex-end;
     width: 250px;
     height: 200px;
-    background: lightskyblue;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -250,7 +249,6 @@ ul {
 
 .kindergarten {
     background: url(../images/background.jpg);
-    opacity: 0.9;
 }
 
 .primary {
@@ -262,6 +260,27 @@ ul {
 }
 
 /* end of info design */
+
+
+
+/* about */
+
+/*  card item background staff photos */
+.staff1 {
+    background: url(../images/background2.jpg);
+}
+
+.staff2 {
+    background: url(../images/kg.jpg);
+}
+
+.staff3 {
+    background: url(../images/primary.jpg);
+}
+
+.staff4 {
+    background: url(../images/primary2.jpg);
+}
 
 /* more info design */
 
@@ -410,6 +429,7 @@ footer a {
 
 
 /* end of footer styling */
+
 
 
 /* admmision style */
